# betalpha

./: Cargo.toml
src/: entities.rs  global_handlers.rs  main.rs  utils.rs  world.rs
src/global_handlers/: blocks.rs  spawn_entity.rs
src/packet/: types.rs
src/procedures/: login.rs
src/procedures/passive/: position_and_look.rs
src/world/: load_demo.rs
