[package]
name = "betalpha-mc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base-encode = "0.3.1"
bytes = "1.5.0"
hematite-nbt = "0.5.2"
tokio = { version = "1", features = ["full"] }
# tokio = { path = "../tokio/tokio", features = ["full"] }
walkdir = "2.4.0"
flate2 = "1"
deflate = "1"
rayon = "1.8.0"
libz-sys = "1.1.12"
regex = "1.10.2"
rand = "0.8.5"
betalpha-derive = {path = "betalpha-derive"}
fs_extra = "1.3.0"
serde_json = "1.0.111"
serde = "1.0.195"

[workspace]
members = ["betalpha-derive"]
